# bug_project

./: .gitignore  CA2_Bug_Project.cpp  CMakeLists.txt
Debug/: CA2_Bug_Project.exe.recipe  CA2_Bug_Project.ilk  CA2_Bug_Project.vcxproj.FileListAbsolute.txt  vc142.idb  vc143.idb
Debug/CA2_Bug_Project.tlog/: CA2_Bug_Project.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
